// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TrainingResult /> should render component when has not wrong 1`] = `
<div
  className="sc-bxivhb kvnfBs"
>
  <div
    className="sc-ifAKCX cqqCIC"
  >
    <div
      className="sc-bdVaJa jXieMO"
      style={
        Object {
          "marginBottom": "16px",
        }
      }
    >
      <div
        className="sc-bwzfXH ijMQBI"
      >
        正解数
      </div>
      <div
        className="sc-htpNat hHyKqi"
      >
        10 / 10
      </div>
    </div>
    <div
      className="sc-bdVaJa jXieMO"
      style={
        Object {
          "marginBottom": "32px",
        }
      }
    >
      <div
        className="sc-bwzfXH ijMQBI"
      >
        平均回答時間
      </div>
      <div
        className="sc-htpNat hHyKqi"
      >
        2.5秒
      </div>
    </div>
    <div
      className="sc-EHOje fCNSzj"
    >
      <a
        className="twitter-share-button"
        data-show-count="false"
        data-size="large"
        data-text="百人一首で 10問中 10問 正解しました！"
        data-url="https://hyakuninanki.net"
        href="https://twitter.com/share"
      >
        Tweet
      </a>
    </div>
    <button
      className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-7"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-35 MuiIcon-fontSizeSmall-42 Component-normalIcon-4"
        >
          arrow_back
        </span>
        メニューに戻る
      </span>
      <span
        className="MuiTouchRipple-root-44"
      />
    </button>
  </div>
</div>
`;

exports[`<TrainingResult /> should render component when has wrong 1`] = `
<div
  className="sc-bxivhb kvnfBs"
>
  <div
    className="sc-ifAKCX cqqCIC"
  >
    <div
      className="sc-bdVaJa jXieMO"
      style={
        Object {
          "marginBottom": "16px",
        }
      }
    >
      <div
        className="sc-bwzfXH ijMQBI"
      >
        正解数
      </div>
      <div
        className="sc-htpNat hHyKqi"
      >
        8 / 10
      </div>
    </div>
    <div
      className="sc-bdVaJa jXieMO"
      style={
        Object {
          "marginBottom": "32px",
        }
      }
    >
      <div
        className="sc-bwzfXH ijMQBI"
      >
        平均回答時間
      </div>
      <div
        className="sc-htpNat hHyKqi"
      >
        2.5秒
      </div>
    </div>
    <div
      className="sc-EHOje fCNSzj"
    >
      <a
        className="twitter-share-button"
        data-show-count="false"
        data-size="large"
        data-text="百人一首で 10問中 8問 正解しました！"
        data-url="https://hyakuninanki.net"
        href="https://twitter.com/share"
      >
        Tweet
      </a>
    </div>
    <button
      className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
      disabled={false}
      onBlur={[Function]}
      onClick={[MockFunction]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "margin": "16px",
        }
      }
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-7"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-35 MuiIcon-fontSizeSmall-42 Component-normalIcon-4"
        >
          refresh
        </span>
        間違えた歌の練習をする
      </span>
      <span
        className="MuiTouchRipple-root-44"
      />
    </button>
    <button
      className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onContextMenu={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiButton-label-7"
      >
        <span
          aria-hidden="true"
          className="material-icons MuiIcon-root-35 MuiIcon-fontSizeSmall-42 Component-normalIcon-4"
        >
          arrow_back
        </span>
        メニューに戻る
      </span>
      <span
        className="MuiTouchRipple-root-44"
      />
    </button>
  </div>
</div>
`;
